--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -54,7 +54,7 @@
                 <a href="{% url 'cart' %}">
                     <img id="carton-icon" src="{% static 'main/img/shop_bag_01.png' %}">
                 </a>
-                <p id="cart-total">0</p>
+                <p id="cart-total">{{cartItems}}</p>
             </div>
         </div>
       </div>
