--- a/main/templates/main/checkout.html
+++ b/main/templates/main/checkout.html
@@ -43,6 +43,7 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
+				<button id="make-payment">Make payment</button>
 			</div>
 
 		</div>
@@ -55,7 +56,7 @@
 				<hr>
 				{% for item in items %}
 					<div class="cart-row">
-						<div style="flex:2"><img class="row-image" src="{% static 'main/img/02.jpg' %}"></div>
+						<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
 						<div style="flex:2"><p>{{item.product.name}}</p></div>
 						<div style="flex:1"><p>${{item.product.price}}</p></div>
 						<div style="flex:1"><p>{{item.quantity}}</p></div>
@@ -66,4 +67,79 @@
 			</div>
 		</div>
 	</div>
+
+<script type="text/javascript">
+	var shipping = '{{order.shipping}}'
+	var total = '{{order.get_cart_total}}'
+	if(shipping == 'False'){
+		document.getElementById('shipping-info').innerHTML = ''
+	}
+
+	if(user != 'AnonymousUser'){
+		document.getElementById('user-info').innerHTML = ''
+	}
+
+	if(shipping == 'False' && user != 'AnonymousUser'){
+		document.getElementById('form-wrapper').classList.add('hidden')
+		document.getElementById('payment-info').classList.remove('hidden')
+	}
+
+	var form = document.getElementById('form')
+
+	form.addEventListener('submit', function (e){
+		e.preventDefault()
+		console.log('Form submitted...')
+		document.getElementById('form-button').classList.add('hidden')
+		document.getElementById('payment-info').classList.remove('hidden')
+	})
+
+	document.getElementById('make-payment').addEventListener('click', function (e){
+		submitFormData()
+	})
+
+	function submitFormData(){
+		console.log('Payment clicked')
+		var userFormData = {
+			'name':null,
+			'email':null,
+			'total':total,
+		}
+		var shippinginfo = {
+			'address':null,
+			'city':null,
+			'state':null,
+			'zipcode':null,
+		}
+
+		if(shipping != 'False'){
+			shippinginfo.address = form.address.value
+			shippinginfo.city = form.city.value
+			shippinginfo.state = form.state.value
+			shippinginfo.zipcode = form.zipcode.value
+
+		}
+		if(user == 'AnonymousUser'){
+			shippinginfo.name = form.name.value
+			shippinginfo.email = form.email.value
+ 		}
+		var url = '/process_order/'
+		fetch(url,{
+			method:'POST',
+			headers:{
+				'Content-Type':'application/json',
+				'X-CSRFToken':csrftoken,
+			},
+			body:JSON.stringify({'form':userFormData, 'shipping':shippinginfo})
+		})
+				.then((response) => response.json())
+				.then((data) => {
+					console.log('Success', data);
+					alert('Transaction completed');
+					window.location.href = "{% url 'store' %}"
+				})
+
+	}
+</script>
+
+
 {% endblock content %}
